@@ -65,7 +65,13 @@ public abstract class FileContextMainOperationsBaseTest  {
 
   public Path localFsRootPath;
 
-  protected final FileContextTestHelper fileContextTestHelper = new FileContextTestHelper();
+  protected final FileContextTestHelper fileContextTestHelper =
+    createFileContextHelper();
+
+  protected FileContextTestHelper createFileContextHelper() {
+    return new FileContextTestHelper();
+  }
+
   protected static FileContext fc;
   
   final private static PathFilter DEFAULT_FILTER = new PathFilter() {
