@@ -35,7 +35,8 @@ import org.junit.BeforeClass;
 
 public class TestFcHdfsPermission extends FileContextPermissionBase {
   
-  private static final FileContextTestHelper fileContextTestHelper = new FileContextTestHelper();
+  private static final FileContextTestHelper fileContextTestHelper =
+      new FileContextTestHelper("/tmp/TestFcHdfsPermission");
   private static FileContext fc;
 
   private static MiniDFSCluster cluster;
