@@ -51,6 +51,10 @@ public class TestFSMainOperationsWebHdfs extends FSMainOperationsBaseTest {
   private static Path defaultWorkingDirectory;
   private static FileSystem fileSystem;
   
+  public TestFSMainOperationsWebHdfs() {
+    super("/tmp/TestFSMainOperationsWebHdfs");
+  }
+
   @Override
   protected FileSystem createFileSystem() throws Exception {
     return fileSystem;
